<resources>
    <string name="app_name">SmartTraffic</string>
    <string name="title_activity_mine">个人中心</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>

    <string name="head">联想智能交通系统</string>
    <string name="nav_account">个人</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于</string>
    <string name="click_login">点击头像登录</string>
    <string name="user_login">用户登录</string>
    <string name="net_setting">网络设置</string>
    <string name="no_data">无数据</string>
    <string name="auto_login">自动登陆</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="error_login_empty">用户名不能为空</string>
    <string name="error_pwd_empty">密码不能为空</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="title_item_main">Tab</string>
    <string name="main_home">主页面</string>
    <string name="creative_design">创意设计</string>
    <string name="title_main">主页</string>
    <!--tab选项名称-->
    <string-array name="tab_names">
        <item>第一页</item>
        <item>第二页</item>
        <item>第三页</item>
    </string-array>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based
    on your message history
  </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loadings">加载中</string>

    <string-array name="spinner_car_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="spinner_car_money">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>

</resources>
