<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login"

    android:fitsSystemWindows="true"
    tools:context=".ui.activity.LoginActivity">

    <include layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activity.LoginActivity"
        tools:showIn="@layout/container">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/TextAppearance.Design.Error">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_name"
                android:maxLength="14"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/colorGray"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="用户名不能为空"
            android:textColor="#000"
            android:textSize="15dp"
            android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/TextAppearance.Design.Error">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="14"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/colorGray"
                android:textSize="25dp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="密码不能为空"
            android:textColor="#000"
            android:textSize="15dp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/jzpwdCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remember_pwd"
                android:textColor="#000"
                android:textSize="22dp" />

            <CheckBox
                android:id="@+id/autologCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/auto_login"
                android:textColor="#000"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/regBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
